<resources>
    <string name="app_name">SKM Mobile</string>
    <string name="todo">TODO</string>
    <string name="title_activity_menu_bar">MenuBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="panduan">Panduan</string>
    <string name="isi_survei">Isi Survei</string>
    <string name="title_activity_menu_navigation">MenuNavigationActivity</string>
    <string name="tv2">Data Responden</string>
    <string name="btn_next">Selanjutnya</string>
    <string name="Home">Selamat Datang</string>
    <string name="Home2">di Survei Kepuasan</string>
    <string name="Home3">Layanan Masyarakat</string>
    <string name="Home4">Kota Blitar</string>
    <string name="pdnBtn">Panduan</string>
    <string name="surveiBtn">Isi Survei</string>
    <string name="title">Silakan Memilih Layanan</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
